Fixed z-index on button

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -15,12 +15,17 @@
 
 .startPageTop {
   background-color: #F5B041;
-  height: 40vh;
 }
 
 .startPageBottom {
   background-image: url("../IMG/map.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 60vh;
+  height: 71vh;
+}
+
+/*För att dölja create button när man klickar på menyn*/
+.input-group-append .btn, .input-group-prepend .btn {
+  position: relative;
+  z-index: 0;
 }
